--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "sequelize-json-api",
   "version": "0.0.1",
   "description": "A connect module that adds a JSON API for all defined models to your application.",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": ""
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,11 @@
   "bugs": {
     "url": "https://github.com/wrenoud/sequelize-json-api/issues"
   },
-  "homepage": "https://github.com/wrenoud/sequelize-json-api"
+  "homepage": "https://github.com/wrenoud/sequelize-json-api",
+  "dependencies": {
+    "express": "^4.6.1",
+    "inflection": "^1.3.8",
+    "lodash": "^2.4.1",
+    "validator": "^3.16.1"
+  }
 }
