--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   },
   "homepage": "https://github.com/wrenoud/sequelize-json-api",
   "dependencies": {
+    "bluebird": "^1.0.0",
     "express": "^4.6.1",
     "inflection": "^1.3.8",
     "lodash": "^2.4.1",
+    "sequelize": "~1.7.9",
     "validator": "^3.16.1"
   }
 }
